[package]
name = "roxy"
version = "0.1.0"
authors = ["dkos <kosdejan@yahoo.com>"]
edition = "2018"
categories = ["reverse proy"]
description = "Reverse proxy"
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"

simplelog = "0.7.6"
log = "0.4.8"

anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"