[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.7.6"
log = "0.4.8"
anyhow = "1"
crossbeam = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
url = "2.2.1"
notify = "4.0.15"
regex = "1.4.4"

cache = { path = "../cache" }